--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -8,22 +8,12 @@ rgb(255, 132, 0);
 #09ba09;
 */
 
-html{
-  scroll-behavior: smooth;
-}
-
-div[id] {
-  padding-top: 90px;
-}
-
 nav{    
   width: 100vw;
   height: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  margin-top: -90px;
   background: #fff;
   box-shadow: 2px 3px 3px rgb(196, 196, 196);
 }
@@ -39,32 +29,34 @@ nav{
   transition: 0.8s;
 }
 
-.menu{
-  width: 100%;
-  justify-content: center;
+.Categories{
+    display: flex;
+    gap: 70px;
+}
+
+.Option {
+  display: flex;
   align-items: center;
-}
-
-ul{
-  gap: 70px;
-  display: flex;
-}
-
-li{
-  list-style: none;
-  display: flex;
-}
-
-li a {
-  font-size: 10px;
+  font-size: 14px;
   font-weight: 500;
   text-decoration: none;
   font-family: roboto, sans-serif;
   color: #09ba09;
 }
 
-li a:hover {
+.Option:hover {
   transform: scale(1.3);
   color: rgb(255, 132, 0);
-    transition: 0.5s;
+  transition: 0.5s;
 }
+
+.ActiveOption {
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+  font-family: roboto, sans-serif;
+  color: rgb(255, 132, 0);
+}
+
