--- a/src/components/cartWidget/cartWidget.css
+++ b/src/components/cartWidget/cartWidget.css
@@ -4,31 +4,30 @@ padding: 0;
 box-sizing: border-box;
 }
 
-.boton-carrito{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 25px;
-  background-color: #09ba09;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-}
-
-.boton-carrito:hover{
-  transform: scale(1.3);
+.CartWidget:hover{
+  transform: scale(1.2);
   transition: 0.8s;
 }
 
-.icono-carrito{
+.CartWidget{
 padding-left: 6px;
 margin-right: 5px;
-height: 15px;
-color: #fff;
+background-color: #09ba09;
+border-radius: 5px;
+height: 40px;
+width: 40px;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 1em;
 }
 
-.contador-carrito{
+.CartWidget img {
+  height: 28px;
+}
+
+/* .contador-carrito{
   padding: 7px 7px 6px 0;
     font-size: 12px;
     color: #fff;
-}
+} */
