--- a/src/components/itemDetailContainer/itemDetailContainer.css
+++ b/src/components/itemDetailContainer/itemDetailContainer.css
@@ -1,15 +1,14 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-/*
-#bdbdbd;
 
-
-*/
-
-.ItemDetailContainer{
-    display: flex;
-    justify-content: center;
+.ItemDetailContainer {
+  display: flex;
+  justify-content: center;
+}
+.CartDetailMsn {
+  font-size: 3rem;
+  margin-bottom: 3%;
 }
