--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -12,7 +12,7 @@ nav{
   width: 100vw;
   height: 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   background: #fff;
   box-shadow: 2px 3px 3px rgb(196, 196, 196);
