--- a/src/components/cartWidget/cartWidget.css
+++ b/src/components/cartWidget/cartWidget.css
@@ -1,33 +1,13 @@
-*{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+.Cartwidget{
+  background-color: #09ba09;
+  padding: 5px;
+  border-radius: 5px;
 }
 
-.CartWidget:hover{
-  transform: scale(1.2);
-  transition: 0.8s;
+.CartwidgetImg{
+  height: 25px;
 }
-
-.CartWidget{
-padding-left: 6px;
-margin-right: 5px;
-background-color: #09ba09;
-border-radius: 5px;
-height: 40px;
-width: 40px;
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 1em;
+a{
+  text-decoration: none;
+  color: #000;
 }
-
-.CartWidget img {
-  height: 28px;
-}
-
-/* .contador-carrito{
-  padding: 7px 7px 6px 0;
-    font-size: 12px;
-    color: #fff;
-} */
