--- a/src/components/cartModal/cartModal.css
+++ b/src/components/cartModal/cartModal.css
@@ -1,3 +1,21 @@
+.container {
+justify-content: center;
+align-items: center;
+}
+
+.cart-modal-items {
+    padding: 2%;
+    background-color: #ffffff50;
+    border-radius: 10px;
+    margin-top: 2%;
+}
+
+.cart-item{
+    display: flex;
+    gap: 12em;
+    margin: 2%;
+}
+
 .cart-modal {
     position: fixed;
     top: 0;
@@ -5,10 +23,24 @@
     z-index: 9999;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn-delete{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2em;
+    height: 2em;
+    border-radius: 10px;
+}   
+
+.img-CartModal{
+    width: 6em;
+    border-radius: 10px;
 }
 
 .cart-modal-content {
@@ -19,11 +51,14 @@
     overflow-y: auto;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    background-image: url(../../img/nutricion.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 .cart-modal-header {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -40,7 +75,14 @@
     color: #666;
 }
 
-.cart-modal-items {
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(no-repeat)}
+.Header{
+    justify-content: space-between;
+}
+
+.h1-checkout{
+    padding: 0 0 0 2.7em;
+
+}
+.h3-checkout, .h6-checkout{
+color: #fff ;
+}
